@@ -12,15 +12,15 @@ make distcheck
 
 VERSION="$(./configure --version | head -n1 | cut -d ' ' -f 3)"
 
-ln -f betaradio-${VERSION}.tar.bz2 betaradio_${VERSION}.orig.tar.bz2
+ln -f betaradio-${VERSION}.tar.xz betaradio_${VERSION}.orig.tar.xz
 
-tar xf betaradio_${VERSION}.orig.tar.bz2
+tar xf betaradio_${VERSION}.orig.tar.xz
 
 cp -a ./debian betaradio-${VERSION}
 
 cd betaradio-${VERSION}
 
-debuild -S -sa -us -uc
+debuild -S -sa -us -uc --lintian-opts --profile debian
 
 cd ..
 
