@@ -2,6 +2,8 @@
 
 	* debian/compat,
 	debian/control: Update debhelper and debian policy.
+	* configure.ac,
+	mkdeb.sh: Switch to xz.
 
 2014-07-02  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
 
